--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/index2.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -22,65 +22,65 @@
 
 
 
-        <!-- INICIO NAV BOOTSTRAP -->
+    <!-- INICIO NAV BOOTSTRAP -->
+    <nav class="navbar navbar-expand-sm navbar-light bg-light " id="nav-expan">
 
-        <nav class="navbar navbar-expand-sm navbar-light bg-light " id="nav-expan">
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-
-
-            <div class="nav-personalizado">
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link bg-light" href="#">Inicio <span class="sr-only"></span></a>
-                        </li>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
 
 
+        <div class="nav-personalizado">
 
-                        <div class="nav-item dropdown bg-light">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Productos
-                            </a>
-                        </div>
-
-                </div>
-
-
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Notebooks</a>
-                    <a class="dropdown-item" href="#">Intrumentos</a>
-                    <div class="dropdown-divider">Produccion musical</div>
-                    <a class="dropdown-item" href="#">Memorias RAM</a>
-                </div>
-
-                     </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link bg-light" href="#">Inicio <span class="sr-only"></span></a>
+                    </li>
 
 
 
 
-                <form class="form-inline my-2 my-lg-0">
-
-                    <div class="boton-buscar-form">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Texto a buscar" aria-label="Search">
+                    <div class="nav-item dropdown bg-light">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Productos
+                        </a>
                     </div>
 
-                    <button class="btn btn-outline-success my-0 my-sm-0" type="submit">Buscar</button>
-                </form>
-
-
             </div>
-        </nav>
 
 
-        <!-- FIN NAV BOOTSTRAP -->
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Notebooks</a>
+                <a class="dropdown-item" href="#">Intrumentos</a>
+                <div class="dropdown-divider">Produccion musical</div>
+                <a class="dropdown-item" href="#">Memorias RAM</a>
+            </div>
+
+            </ul>
+
+
+        <div class="sform">    
+
+            <form class="form-inline my-2 my-lg-0">
+
+                <div class="boton-buscar-form">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Texto a buscar" aria-label="Search">
+                </div>
+
+                <button class="btn btn-outline-success my-0 my-sm-0" type="submit">Buscar</button>
+            </form>
+        </div>
+
+        </div>
+    </nav>
+
+
+
+    <!-- FIN NAV BOOTSTRAP -->
 
 
 
